fix css left tabs alignment

--- a/Frontend/app/styles/main.css
+++ b/Frontend/app/styles/main.css
@@ -134,6 +134,11 @@ h4 {
 h5 {
   font-size: 21px;
   line-height: 30px; }
+  h5.form-control-static {
+    margin-top: 5px; }
+  h5.subtitle {
+    margin-top: 5px;
+    font-size: 18px; }
 
 /** DEFAULT LINK STYES */
 a:hover {
@@ -1132,10 +1137,6 @@ h3.food-header {
     font-size: 14px;
     font-weight: bolder;
     cursor: pointer; }
-
-h5.subtitle {
-  margin-top: 5px;
-  font-size: 18px; }
 
 div.tab-pane.active > h5 {
   margin-top: 15px; }
