--- a/Frontend/app/styles/scss/modules/_food.scss
+++ b/Frontend/app/styles/scss/modules/_food.scss
@@ -100,11 +100,6 @@ h3.food-header{
   }
 }
 
-h5.subtitle{
-  margin-top:5px;
-  font-size:18px;
-}
-
 div.tab-pane.active{
   & > h5{
     margin-top:15px;
